welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
  }else if (detrompeur==0){
        ^